# python-project-50

./: .coverage  .coveralls.yml  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: python_tests.yml
files/: file3.yml
gendiff/parser/: parse_files.py
gendiff/scripts/: gendiff.py  gendiff_json.py
tests/: expected_result.txt  test1.json  test_gendiff.py
